<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ComicViewer</string>
    <string name="explorer_name">Select comic</string>
    <string name="nodata">No data</string>
    <string name="outofmemory">Out of memory</string>
    <string name="encrypted_file">Encrypted file</string>
    <string name="first_page">First page</string>
    <string name="last_page">Last Page</string>
    <string name="switch_bookmark">Switch Bookmark</string>
    <string name="close">Close</string>
    <string name="rescan">Re-scan collection</string>
    <string name="change_directory">Books directory</string>
    <string name="remove_comic">Remove book</string>
    <string name="switch_read">Switch Read state</string>
    <string name="settings">Settings&#8230;</string>
    <string name="file_name">File name</string>
    <string name="newnew">New</string>
    <string name="cover">Book cover</string>
    <string name="bookmark">Bookmark</string>
    <string name="please_select_directory">Using default directory "Books". If not adequate, select another directory in the menu.</string>
    <string name="system_directory">" is a system directory and cannot be used. Please, select a subdirectory."</string>
    <string name="no_suitable_reader">Not suitable reader for </string>
    <string name="read">" (read)"</string>
    <string name="in">" in "</string>
    <string name="page">"Page "</string>
    <string name="bookmark_list">Bookmark list&#8230;</string>
    <string name="show_help">Usage&#8230;</string>
    <string name="no_comic">Book not found</string>
    <string name="cannot_remove_directories">Directories cannot be removed</string>
    <string name="removed">" was removed"</string>
    <string name="loading">"Loading "</string>
    <string name="go_to_page">Go to page&#8230;</string>
    <string name="switch_drawing">Switch drawing mode</string>
    <string name="switch_drawing_visible">Switch Drawing Visible</string>
    <string name="rubber">Rubber</string>
    <string name="draw_mode_not_available">The draw mode is not available</string>
    <string name="no_bookmarks">No bookmarks defined</string>
    <string name="cannot_read">Cannot read the file</string>
    <string name="helpfile_title">Usage</string>
    <!--  Settings menu -->
    <string name="black">Black</string>
    <string name="grey">Grey</string>
    <string name="white">White</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="pref_back_color">Background color</string>
    <string name="pref_back_color_sum">Back color of the viewer screen</string>
    <string name="pref_changepage_speed">Speed</string>
    <string name="pref_changepage_speed_sum">Page movement speed</string>
    <string name="pref_load_next">Load next</string>
    <string name="pref_load_next_sum">Load next document when current issue finishes</string>
    <string name="pref_draw_mode">Draw mode</string>
    <string name="pref_draw_mode_sum">Make drawing on screen available</string>
    <string name="pref_screen_on">Keep screen on</string>
    <string name="pref_screen_on_sum">Keep the screen on while reading</string>
    <string name="pref_pdf_cover">Use a generic cover for PDF files</string>
    <string name="pref_pdf_cover_sum">Reading PDF files may be slow. Use generic covers to improve stability</string>
    <string name="pref_show_progress">Show progress</string>
    <string name="pref_show_progress_sum">Show reading progress as a tiny status bar (right corner)</string>
    <!--  Changelog -->
    <string name="changelog_title">Recent changes</string>
    <string name="changelog_full_title">History</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">Show full history</string>
</resources>