<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference 
        android:key="pref_back_color"
        android:title="@string/pref_back_color"
        android:summary="@string/pref_back_color_sum"
        android:defaultValue="1" 
        android:entries="@array/pref_back_color_entries"
        android:entryValues="@array/pref_back_color_values"
    />
    
    <ListPreference 
        android:key="pref_changepage_speed"
        android:title="@string/pref_changepage_speed"
        android:summary="@string/pref_changepage_speed_sum"
        android:defaultValue="1" 
        android:entries="@array/pref_changepage_speed_entries"
        android:entryValues="@array/pref_changepage_speed_values"
    />
    
    <CheckBoxPreference
            android:key="pref_load_next"
            android:title="@string/pref_load_next"
            android:summary="@string/pref_load_next_sum"
            android:defaultValue="true"
     />
    
    <CheckBoxPreference
            android:key="pref_draw_mode"
            android:title="@string/pref_draw_mode"
            android:summary="@string/pref_draw_mode_sum"
            android:defaultValue="true"
     />
    
     <CheckBoxPreference
            android:key="pref_screen_on"
            android:title="@string/pref_screen_on"
            android:summary="@string/pref_screen_on_sum"
            android:defaultValue="true"
     />
     
     <CheckBoxPreference
            android:key="pref_pdf_cover"
            android:title="@string/pref_pdf_cover"
            android:summary="@string/pref_pdf_cover_sum"
            android:defaultValue="false"
     />
    

</PreferenceScreen>